GPROD/apps/backend/k8s/overlays/develop-gprod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gprod-backend
  namespace: develop-gprod
  labels:
    app: gprod-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gprod-backend
  template:
    metadata:
      labels:
        app: gprod-backend
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: backend
          image: ghcr.io/themacroeconomicdao/gprod-backend:dev
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 5
