GPROD/apps/backend/k8s/overlays/develop-gprod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gprod-backend
  namespace: develop-gprod
  labels:
    app: gprod-backend
spec:
  selector:
    app: gprod-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
